all working fine

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,8 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
-    
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeFeUeNCLOJQrmawBEsihR-oWRwbXqACg"
+  type="text/javascript"></script>    
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -89,6 +90,7 @@
     <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
